--- a/single_service.html
+++ b/single_service.html
@@ -161,7 +161,8 @@
                         </div>
                         <div class="col-md-8 mt-6 md:mt-0">
                             <p class="fw-bold text-2xl">خدمات التدريب</p>
-                            <p class="tracking-wide leading-8">يساعد «المركز الإداري والمالي للتدريب» الأفراد على توسيع معارفهم ومداركهم العملية والنظرية وتطوير مهاراتهم عن طريق مجموعة غير محدودة من البرامج التدريبية التي تركز على مهارات القيادة والمنافسة التجارية ومهارات العمل المؤسسي. لتطوير مسيرتك المهنية في أي مرحلة منها سواء كنت طالب او موظف مبتدئ او اداري ذو منصب مرموق أو حتى صاحب العمل فهناك دائمًا مجال للتطور والازدهار الوظيفي والمعرفي، وعليه فنحن نقدم لك تجربة فريدة للتعلم القائم على دراسات الحالات العملية وأحدث النظريات العلمية ورؤى الأعمال القابلة للتنفيذ.
+                            <p class="tracking-wide leading-8">
+                                تفاصيل
                             </p>
                         </div>
                     </div>
@@ -175,29 +176,29 @@
                             <div class="col-md-3 flex flex-col justify-center alitn-center   py-2">
                                 <i class="fa-solid fa-sack-dollar text-main text-5xl"></i>
                                 <div class="text-center">
-                                    <p class="fw-bold text-xl py-2">أسعار مناسبة</p>
-                                    <p class="">اسعارنا مناسبة واقتصادية</p>
+                                    <p class="fw-bold text-xl py-2">ميزه 1</p>
+                                    <p class="">تفاصيل ميزه 1</p>
                                 </div>
                             </div>
                             <div class="col-md-3 flex flex-col justify-center alitn-center  py-2">
                                 <i class="fa-solid fa-graduation-cap text-main text-5xl"></i>
                                 <div class="text-center">
-                                    <p class="fw-bold text-xl py-2">المتخرجين</p>
-                                    <p class="">مناسبة للمتخرجين والمتدربين</p>
+                                    <p class="fw-bold text-xl py-2">ميزه 2</p>
+                                    <p class="">تفاصيل ميزه 2</p>
                                 </div>
                             </div>
                             <div class="col-md-3 flex flex-col justify-center alitn-center  py-2">
                                 <i class="fa-solid fa-disease text-main text-5xl"></i>
                                 <div class="text-center">
-                                    <p class="fw-bold text-xl py-2">سهلة الوصول</p>
-                                    <p class="">يمكنك الوصول إليها بسهولة</p>
+                                    <p class="fw-bold text-xl py-2">ميزه 3</p>
+                                    <p class="">تفاصيل ميزه 3</p>
                                 </div>
                             </div>
                             <div class="col-md-3 flex flex-col justify-center alitn-center  py-2">
                                 <i class="fa-solid fa-certificate text-main text-5xl"></i>
                                 <div class="text-center">
-                                    <p class="fw-bold text-xl py-2">شهادة معتمدة</p>
-                                    <p class="">سوف تحصل علي شهادة معتمدة</p>
+                                    <p class="fw-bold text-xl py-2">ميزه 4</p>
+                                    <p class="">تفاصيل ميزه 4</p>
                                 </div>
                             </div>
                         </div>
