--- a/index-ar.html
+++ b/index-ar.html
@@ -295,10 +295,7 @@
         <!-- Courses -->
         <section class="courses py-5 bg-gray-100">
             <div class="container mx-auto">
-                <div class="section_title">
-                    <p>أحدث الدورات</p>
-                </div>
-                <div class="search_form bg-white py-3 px-3">
+                <div class="search_form bg-white pt-3 pb-5 px-3">
                     <form>
                         <p class="text-center fw-bolder text-2xl mb-2">أبحث في الدورات</p>
                         <div class="row">
@@ -326,6 +323,16 @@
                             </div>
                         </div>
                     </form>
+                </div>
+                <div class="courses_filter">
+                    <div class="flex justify-center gap-3 mt-3 items-center">
+                        <button class="py-2 px-3 bg-main text-white rounded">الكل</button>
+                        <button class="py-2 px-3 bg-main text-white rounded">حضور عن بعد</button>
+                        <button class="py-2 px-3 bg-main text-white rounded">شهادات مهنية</button>
+                    </div>
+                </div>
+                <div class="section_title mt-3">
+                    <p>أحدث الدورات</p>
                 </div>
 
                 <div class="content mt-5">
