fix filter home_page

--- a/index-ar.html
+++ b/index-ar.html
@@ -330,7 +330,8 @@
                 <div class="courses_filter">
                     <div class="flex justify-center gap-3 mt-3 items-center">
                         <button class="py-2 px-3 bg-main text-white rounded">الكل</button>
-                        <button class="py-2 px-3 bg-main text-white rounded">حضور عن بعد</button>
+                        <button class="py-2 px-3 bg-main text-white rounded">حضور</button>
+                        <button class="py-2 px-3 bg-main text-white rounded">اونلاين</button>
                         <button class="py-2 px-3 bg-main text-white rounded">شهادات مهنية</button>
                     </div>
                 </div>
