--- a/course-content.html
+++ b/course-content.html
@@ -597,10 +597,12 @@
                             </div>
                         </a>
                         <!-- End Video -->
-
+                        <div class="flex justify-end mt-2">
+                            <button class="px-3 py-2 bg-main text-second rounded"><i class="fa-solid fa-check"></i> أكملت الاطلاغ علي المحتوي</button>
+                        </div>
                         <div class="course_navigate flex justify-between items-center mt-3">
-                            <a href="#" class="px-3 py-2 bg-second text-white rounded"><i class="fa-solid fa-chevron-right"></i> الدرس التالي</a>
-                            <a href="#" class="px-3 py-2 bg-second text-white rounded">الدرس السابق <i class="fa-solid fa-chevron-left"></i></a>
+                            <a href="#" class="px-3 py-2 bg-second text-white rounded"><i class="fa-solid fa-chevron-right"></i> الدرس السابق</a>
+                            <a href="#" class="px-3 py-2 bg-second text-white rounded">الدرس التالي <i class="fa-solid fa-chevron-left"></i></a>
                         </div>
                         
                         <nav class="mt-6 z-0">
