--- a/courses.html
+++ b/courses.html
@@ -167,8 +167,40 @@
 
                             <!-- Filter -->
                             <div class="py-3 border-b-2 border-slate-400">
-                                <p class="fw-bold text-2xl">فلترة الدورات</p>
-                                <div class="mt-2">
+                                <p class="fw-bold text-2xl">التخصصات</p>
+                                <div class="mt-3">
+                                    <a href="courses.html" class="hover:text-yellow-500">
+                                        <div class="flex items-center gap-3 py-3 px-2 bg-gray-200">
+                                            <p class="fw-bolder text-lg ">موارد بشرية</p>
+                                            <i class="fa-solid fa-arrow-left"></i>
+                                        </div>
+                                    </a>
+                                    <a href="courses.html" class="hover:text-yellow-500">
+                                        <div class="flex items-center gap-3 py-3 px-2 bg-gray-200">
+                                            <p class="fw-bolder text-lg ">تقنية المعلومات</p>
+                                            <i class="fa-solid fa-arrow-left"></i>
+                                        </div>
+                                    </a>
+                                    <a href="courses.html" class="hover:text-yellow-500">
+                                        <div class="flex items-center gap-3 py-3 px-2 bg-gray-200">
+                                            <p class="fw-bolder text-lg ">الجودة</p>
+                                            <i class="fa-solid fa-arrow-left"></i>
+                                        </div>
+                                    </a>
+                                    <a href="courses.html" class="hover:text-yellow-500">
+                                        <div class="flex items-center gap-3 py-3 px-2 bg-gray-200">
+                                            <p class="fw-bolder text-lg ">محاسبة مالية</p>
+                                            <i class="fa-solid fa-arrow-left"></i>
+                                        </div>
+                                    </a>
+                                    <a href="courses.html" class="hover:text-yellow-500">
+                                        <div class="flex items-center gap-3 py-3 px-2 bg-gray-200">
+                                            <p class="fw-bolder text-lg ">ريادة اعمال</p>
+                                            <i class="fa-solid fa-arrow-left"></i>
+                                        </div>
+                                    </a>
+                                </div>
+                                <!-- <div class="mt-2">
                                     <label>نوع الحضور</label>
                                     <select class="form-select mt-1">
                                         <option>الكل</option>
@@ -193,7 +225,7 @@
                                         <option>مجاني</option>
                                         <option>مدفوع</option>
                                     </select>
-                                </div>
+                                </div> -->
                             </div>
                             <!-- End Filter -->
                             
@@ -246,6 +278,15 @@
                         <div class="section_title">
                             <p>الموارد البشرية</p>
                         </div>
+
+                        <div class="flex flex-items justify-between gap-4 mt-5 mb-4">
+                            <button class="bg-main text-second py-2 px-3 rounded-lg flex-1 shadow">الكل</button>
+                            <button class="bg-main text-second py-2 px-3 rounded-lg flex-1 shadow">حضور</button>
+                            <button class="bg-main text-second py-2 px-3 rounded-lg flex-1 shadow">أونلاين</button>
+                            <button class="bg-main text-second py-2 px-3 rounded-lg flex-1 shadow">مسجلة</button>
+                            <button class="bg-main text-second py-2 px-3 rounded-lg flex-1 shadow">شهادة مهنية</button>
+                        </div>
+
                         <div class="courses">
                             <div class="content">
                                 <div class="row g-3">
