--- a/index-ar.html
+++ b/index-ar.html
@@ -102,13 +102,20 @@
                             <i class="fa-solid fa-chevron-down mr-2"></i>
                         </a>
                         <ul
-                            class="absolute top-10 border pr-2 bg-white text-black w-40 hidden group-hover:block rounded nav_item_dropdown">
-                            <li class="py-2 px-2"><a href="courses.html" class="hover:text-yellow-500">موارد بشرية</a></li>
-                            <li class="py-2 px-2"><a href="courses.html" class="hover:text-yellow-500">تقنية المعلومات</a></li>
-                            <li class="py-2 px-2"><a href="courses.html" class="hover:text-yellow-500">ادارة</a></li>
-                            <li class="py-2 px-2"><a href="courses.html" class="hover:text-yellow-500">جودة</a></li>
-                            <li class="py-2 px-2"><a href="courses.html" class="hover:text-yellow-500">ريادة اعمال</a></li>
-                            <li class="py-2 px-2"><a href="courses.html" class="hover:text-yellow-500">محاسبة مالية</a></li>
+                            class="absolute top-10 border pr-2 bg-white text-black w-96 hidden group-hover:flex flex-row flex-wrap rounded nav_item_dropdown">
+                            <li class="py-2 px-2 w-1/2"><a href="courses.html" class="hover:text-yellow-500">موارد بشرية</a></li>
+                            <li class="py-2 px-2 w-1/2"><a href="courses.html" class="hover:text-yellow-500">تقنية المعلومات</a></li>
+                            <li class="py-2 px-2 w-1/2"><a href="courses.html" class="hover:text-yellow-500">ادارة</a></li>
+                            <li class="py-2 px-2 w-1/2"><a href="courses.html" class="hover:text-yellow-500">جودة</a></li>
+                            <li class="py-2 px-2 w-1/2"><a href="courses.html" class="hover:text-yellow-500">ريادة اعمال</a></li>
+                            <li class="py-2 px-2 w-1/2"><a href="courses.html" class="hover:text-yellow-500">محاسبة مالية</a></li> 
+                            <li class="py-2 px-2 w-1/2"><a href="courses.html" class="hover:text-yellow-500">مهارات شخصية</a></li> 
+                            <li class="py-2 px-2 w-1/2"><a href="courses.html" class="hover:text-yellow-500">العلاقات العامة</a></li> 
+                            <li class="py-2 px-2 w-1/2"><a href="courses.html" class="hover:text-yellow-500">المراجعة و التدقيق</a></li> 
+                            <li class="py-2 px-2 w-1/2"><a href="courses.html" class="hover:text-yellow-500">اعداد قادة</a></li> 
+                            <li class="py-2 px-2 w-1/2"><a href="courses.html" class="hover:text-yellow-500">السكرتارية و ادارة المكاتب</a></li> 
+                            <li class="py-2 px-2 w-1/2"><a href="courses.html" class="hover:text-yellow-500">ادارة اعمال</a></li> 
+                            
                         </ul>
                     </li>
                     <li class="relative group nav_item text-slate-50 md:text-black">
