--- a/contact-us.html
+++ b/contact-us.html
@@ -203,7 +203,7 @@
                         </form>
                     </div>
                     <div class="col-md-5">
-                        <iframe style="border-radius:10px" class="h-96" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d40694.375870376425!2d35.959528163964485!3d31.952195461161395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151b5f96539bcc23%3A0x83d61bcf8e637e6d!2z2YLZhNi52Kkg2LnZhdin2YY!5e1!3m2!1sar!2seg!4v1672748300224!5m2!1sar!2seg" width="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe style="border-radius:10px" class="h-96" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34787.084505129664!2d58.37059123892747!3d23.58489327206973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e91ffa8879aafc9%3A0xdb53876d0d79a72c!2sMuscat%2C%20Oman!5e0!3m2!1sen!2seg!4v1676371539795!5m2!1sen!2seg" width="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
