--- a/index.html
+++ b/index.html
@@ -102,13 +102,20 @@
                             <i class="fa-solid fa-chevron-down ms-2"></i>
                         </a>
                         <ul
-                            class="absolute top-10 border pr-2 bg-white text-black w-40 hidden group-hover:block rounded nav_item_dropdown">
-                            <li class="py-2 px-2"><a href="courses.html">Human resources</a></li>
-                            <li class="py-2 px-2"><a href="courses.html">IT</a></li>
-                            <li class="py-2 px-2"><a href="courses.html">Administration</a></li>
-                            <li class="py-2 px-2"><a href="courses.html">Quality</a></li>
-                            <li class="py-2 px-2"><a href="courses.html">Entrepreneurship</a></li>
-                            <li class="py-2 px-2"><a href="courses.html">Financial Accounting</a></li>
+                            class="absolute top-10 border pr-2 bg-white text-black w-96 hidden group-hover:flex flex-row flex-wrap rounded nav_item_dropdown">
+                            <li class="py-2 px-2 w-1/2"><a href="#">Human resources</a></li>
+                            <li class="py-2 px-2 w-1/2"><a href="#">IT</a></li>
+                            <li class="py-2 px-2 w-1/2"><a href="#">Administration</a></li>
+                            <li class="py-2 px-2 w-1/2"><a href="#">Quality</a></li>
+                            <li class="py-2 px-2 w-1/2"><a href="#">Entrepreneurship</a></li>
+                            <li class="py-2 px-2 w-1/2"><a href="#">Financial Accounting</a></li>
+                            <li class="py-2 px-2 w-1/2"><a href="#">Personal Skills</a></li>
+                            <li class="py-2 px-2 w-1/2"><a href="#">Review and Audit</a></li>
+                            <li class="py-2 px-2 w-1/2"><a href="#">Leaders Preparation</a></li>
+                            <li class="py-2 px-2 w-1/2"><a href="#">Business Management</a></li>
+                            <li class="py-2 px-2 w-1/2"><a href="#">Secretarial and office management</a></li>
+                            <li class="py-2 px-2 w-1/2"><a href="#">Quality</a></li>
+
                         </ul>
                     </li>
                     <li class="relative group nav_item text-slate-50 md:text-black">
@@ -118,9 +125,9 @@
                         </a>
                         <ul
                             class="absolute top-10 border pr-2 bg-white text-black w-40 hidden group-hover:block rounded nav_item_dropdown">
-                            <li class="py-2 px-2"><a href="single_service.html">Training services</a></li>
-                            <li class="py-2 px-2"><a href="single_service.html">Consulting services</a></li>
-                            <li class="py-2 px-2"><a href="single_service.html">Employment services</a></li>
+                            <li class="py-2 px-2"><a href="#">Training services</a></li>
+                            <li class="py-2 px-2"><a href="#">Consulting services</a></li>
+                            <li class="py-2 px-2"><a href="#">Employment services</a></li>
                         </ul>
                     </li>
                     <li class="relative group nav_item text-slate-50 md:text-black">
@@ -130,10 +137,11 @@
                         </a>
                         <ul
                             class="absolute top-10 border pr-2 bg-white text-black w-32 hidden group-hover:block rounded nav_item_dropdown">
-                            <li class="py-2 px-2"><a href="news.html">News</a></li>
+                            <li class="py-2 px-2"><a href="#">News</a></li>
                             <li class="py-2 px-2"><a href="testimonials.html">Testimonials</a></li>
-                            <li class="py-2 px-2"><a href="photos.html">Photos</a></li>
-                            <li class="py-2 px-2"><a href="videos.html">Videos</a></li>
+                            <li class="py-2 px-2"><a href="#">Photos</a></li>
+                            <li class="py-2 px-2"><a href="#">Videos</a></li>
+                            <li class="py-2 px-2"><a href="#">Events</a></li>
                         </ul>
                     </li>
                     <li class="relative group nav_item text-slate-50 md:text-black">
